--- a/ArmaTuFecha/src/main/resources/templates/eliminar-cuenta-musico.html
+++ b/ArmaTuFecha/src/main/resources/templates/eliminar-cuenta-musico.html
@@ -26,7 +26,7 @@
                     <a th:href="'/musicos/confirmacion-eliminar-perfil/' + ${id_usuario}">Sí, eliminar cuenta y perfil.</a>
                     <br></br>
                    
-                    <a th:href="${volver}">Volver.</a>
+                    <a href="./">Volver.</a>
 					
 					
 				</div>
