--- a/ArmaTuFecha/src/main/resources/templates/perfil-musico-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-musico-logueado.html
@@ -14,7 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/portfolio-item.css" rel="stylesheet"></link>
-    <link href="css/scrolling-nav.css" rel="stylesheet"></link>
+    <link href="/css/scrolling-nav.css" rel="stylesheet"></link>
     <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 
   </head>
