--- a/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
+++ b/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
@@ -43,7 +43,7 @@
 		      <div class="container text-center">    
 		        <div class="row">
 		        	<div class="col-12">
-		        		<h2 th:text="${mensaje_eliminado}"></h2>
+		        		<h2 th:text="${cuenta_eliminada}"></h2>
 		        		<h1>Bienvenid@ a Arma Tu Fecha<br>¿Qué estas buscando?</h1>
 		        	</div>
 		        </div>
