integrado clodunary para cargar fotos en registro modificado template perfil local agregadas fotos en perfil local

--- a/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
+++ b/ArmaTuFecha/src/main/resources/templates/crear-perfil.html
@@ -16,12 +16,8 @@
 		<!-- Custom styles for this template -->
 		<link href="/css/scrolling-nav.css" rel="stylesheet"></link>
 		<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
-		
 
-	    <script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-	    
-     
-		
+
 
 </head>
 
@@ -172,16 +168,28 @@
 								<div class="invalid-feedback">Por favor completa este campo.</div>
 							    <div class="valid-feedback"></div>
 								<br></br>
+								<label>Agrega 3 fotos a tu perfil:</label><br>
+								<div class="alert alert-danger" role="alert" th:text="${aviso_fotos}" th:if="${aviso_fotos}"></div>
+								<a href="#" id="upload_widget_opener1">Agregar una foto</a><br>
+								<input type="hidden" id="foto1" name="foto1"></input>
+								<ul id="preview1"></ul>
+								<a href="#" id="upload_widget_opener2">Agregar una foto</a>
+								<input type="hidden" id="foto2" name="foto2" ></input>
+								<ul id="preview2"></ul>
+								<a href="#" id="upload_widget_opener3">Agregar una foto</a>
+								<input type="hidden" id="foto3" name="foto3" ></input>
+								<ul id="preview3"></ul>
 								
-								<a href="#" id="upload_widget_opener">Cargá tus fotos</a><br></br>
+								<br></br>
 								<label>Links a redes sociales:&nbsp;</label><br></br>
 								<label>Facebook:&nbsp;</label><input class="form-control" name="red_social1" type="url" th:value="${red_social1Cargada}"></input><br></br>
 								<label>Instagram:&nbsp;</label><input class="form-control" name="red_social2" type="url" th:value="${red_social2Cargada}"></input><br></br>							
 								<label>Otro:&nbsp;</label><input class="form-control" name="red_social3" type="url" th:value="${red_social3Cargada}"></input><br></br>						
-								<!-- falta input para cargar fotos -->
-								<input class="btn btn-outline-dark" type="submit" value="Crear"></input>
-								<br></br>
-								<br></br>
+								
+								<div class="text-center">
+									<input class="btn btn-outline-dark btn-lg" type="submit" value="Crear"></input>	
+								</div>
+								
 					        </form>			
 					
 						</div>
@@ -255,6 +263,19 @@
 							<div class="invalid-feedback">Por favor completa este campo.</div>
 							<div class="valid-feedback"></div>
 							<br></br>
+							<label>Agrega 3 fotos a tu perfil:</label><br>
+							<div class="alert alert-danger" role="alert" th:text="${aviso_fotos}" th:if="${aviso_fotos}"></div>
+							<a href="#" id="upload_widget_opener4">Agregar foto</a>
+							<input type="hidden" id="foto4" name="foto1"></input>
+							<ul id="preview4"></ul>
+							<a href="#" id="upload_widget_opener5">Agregar foto</a>
+							<input type="hidden" id="foto5" name="foto2" ></input>
+							<ul id="preview5"></ul>
+							<a href="#" id="upload_widget_opener6">Agregar foto</a>
+							<input type="hidden" id="foto6" name="foto3" ></input>
+							<ul id="preview6"></ul>
+							
+							<br></br>
 							<label>Links a redes sociales:&nbsp;</label><br></br>
 							<label>Facebook:&nbsp;</label><input class="form-control" name="red_social1" type="url" th:value="${red_social1Cargada}"></input><br></br>
 							<label>Instagram:&nbsp;</label><input class="form-control" name="red_social2" type="url" th:value="${red_social2Cargada}"></input><br></br>						
@@ -263,9 +284,10 @@
 							<label>YouTube:&nbsp;</label><input class="form-control" name="link_musica1" type="url" th:value="${link_musicaCargado1}"></input><br></br>	
 							<label>Bandcamp:&nbsp;</label><input class="form-control" name="link_musica2" type="url" th:value="${link_musicaCargado2}"></input><br></br>						
 							<label>Otro:&nbsp;</label><input class="form-control" name="link_musica3" type="url" th:value="${link_musicaCargado3}"></input><br></br>						
-							<!-- falta input para cargar fotos -->
-							<input class="btn btn-outline-dark" type="submit" value="Crear"></input>	
-				
+							
+							<div class="text-center">
+								<input class="btn btn-outline-dark btn-lg" type="submit" value="Crear"></input>	
+							</div>
 						</form>		
 					
 						</div>
@@ -293,10 +315,11 @@
 			<script src="/js/scrolling-nav.js"></script>
 			<script src="/js/formulario.js"></script>
 			<script src="/js/validacionform.js"></script>
-			<script src="/js/cloudinary.js"></script>
+		    <script src="/js/cloudinary.js"></script>
 			
 			<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>  
 			<script src='//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+		
 		
 		</body>
 
