--- a/ArmaTuFecha/src/main/resources/templates/editar-perfil-local.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-perfil-local.html
@@ -125,10 +125,9 @@
 								<label>Instagram:&nbsp;</label><input class="form-control" name="red_social2" type="url" th:value="${red_social2}"></input><br></br>							
 								<label>Otro:&nbsp;</label><input class="form-control" name="red_social3" type="url" th:value="${red_social3}"></input><br></br>						
 								
-								<!-- falta input para cargar fotos -->
-								<input class="btn btn-default" type="submit" value="Guardar cambios"></input>
-								<br></br>
-								<br></br>
+								<div class="text-center">
+									<input class="btn btn-outline-light btn-lg" type="submit" value="Crear"></input>	
+								</div>
 							</form>			
 						</div>
 					  </div> 
