--- a/ArmaTuFecha/src/main/resources/templates/editar-perfil-musico.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-perfil-musico.html
@@ -124,10 +124,10 @@
 								<label>YouTube:&nbsp;</label><input class="form-control" name="link_musica1" type="url" th:value="${link_musica1}"></input><br></br>	
 								<label>Bandcamp:&nbsp;</label><input class="form-control" name="link_musica2" type="url" th:value="${link_musica2}"></input><br></br>						
 								<label>Otro:&nbsp;</label><input class="form-control" name="link_musica3" type="url" th:value="${link_musica3}"></input><br></br>	
-								<!-- falta input para cargar fotos -->
-								<input class="btn btn-default" type="submit" value="Guardar cambios"></input>
-								<br></br>
-								<br></br>
+								
+								<div class="text-center">
+									<input class="btn btn-outline-light btn-lg" type="submit" value="Crear"></input>	
+								</div>
 							</form>			
 						</div>
 					  </div> 
