--- a/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
+++ b/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
@@ -71,7 +71,7 @@
 									<br>
 									También podes crear un perfil para tu banda para que te encuentren en el listado otrxs músicxs u organizadores.
 				    </p>
-					<a href="/crear-perfil" class="btn btn-outline-dark">Crear un perfil</a>          
+					<a href="/crear-perfil" class="btn btn-outline-dark btn-lg">Crear un perfil</a>          
 		          </div>
 		        </div>
 		      </div>
