--- a/ArmaTuFecha/src/main/resources/templates/perfil-local.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-local.html
@@ -53,11 +53,46 @@
       	<div class="col-8">
 			<div class="row">
 				<div class="col-md-12">
-					<img class="img-fluid" src="http://placehold.it/750x500" alt="">
+					<div id="carouselExampleIndicators" class="carousel slide my-4" data-ride="carousel">
+            <ol class="carousel-indicators">
+              <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+              <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+              <div class="carousel-item active">
+                <img class="d-block img-fluid" th:src="${foto1}" alt="First slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block img-fluid" th:src="${foto2}" alt="Second slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block img-fluid" th:src="${foto3}" alt="Third slide">
+              </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-6">
+				<div class="col-12">
+					<h3 class="my-3">Descripción</h3>
+          			<p th:text="${descripcion}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
+       
+					
+				</div>
+			</div>      	
+      	</div>
+      	<div class="col-md-4">
+      		<div class="row">
+				<div class="col">
 					<h3 class="my-3">Datos de contacto</h3>
 					<label th:text="${provincia} + ', '">Lorem Ipsum</label>&nbsp;<label th:text="${localidad}">Lorem Ipsum</label><br>
 		            <label th:text="${direccion}">Lorem Ipsum</label><br>
@@ -65,7 +100,9 @@
 		            <label th:text="${mail_contacto}">a</label><br>
 				    
 				</div>
-				<div class="col-6">
+			</div>
+			<div class="row">	
+				<div class="col">
 					<h3 class="my-3">Redes Sociales</h3>
 					<a th:href="${red_social1}" th:if="${red_social1}">Facebook</a><br><br>
 					<a th:href="${red_social2}" th:if="${red_social2}">Instagram</a><br><br>
@@ -73,43 +110,11 @@
 				</div>
 			</div>      	
       	</div>
-      	<div class="col-md-4">
-      		<h3 class="my-3">Descripción</h3>
-          <p th:text="${descripcion}">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae. Sed dui lorem, adipiscing in adipiscing et, interdum nec metus. Mauris ultricies, justo eu convallis placerat, felis enim.</p>
-       
-      	</div>
+      		
+      
       </div>
       
-      <h3 class="my-4">Fotos</h3>
-
-      <div class="row">
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-      </div>
-      <!-- /.row -->
+  
 
     </div>
     <!-- /.container -->
