terminados todos los templates y rutas de busqueda en ambos tipos de perfiles arreglados problemas de responsive

--- a/ArmaTuFecha/src/main/resources/static/css/estilos.css
+++ b/ArmaTuFecha/src/main/resources/static/css/estilos.css
@@ -36,8 +36,14 @@
 	margin-top: 0px;
 	
 }
+
 .bootstrap-override-header {
 	padding-bottom: 80px !important;
+}
+
+.bootstrap-override-header2 {
+	padding-top: 100px;
+	padding-bottom: 100px;
 }
 
 
