--- a/ArmaTuFecha/src/main/resources/templates/pagina-principal-local-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/pagina-principal-local-logueado.html
@@ -52,7 +52,7 @@
 		        </div>
 		        <div class="row">
 					<div class="col-lg-6 mx-auto text-center" id="bootstrap-override-col1">
-						<a href="/listado-locales" id="btn1" class="btn btn-outline-light">Lugares donde no cobren<br>para tocar</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+						<a href="/listado-locales" id="btn1" class="btn btn-outline-light">Lugares donde<br>tocar</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 					</div>                
 			    	<div class="col-lg-6 mx-auto text-center" id="bootstrap-override-col2">
 			    		<a href="/listado-musicos" id="btn2" class="btn btn-outline-light">Bandas/musicos solistas/etc.<br>para armar fechas</a>			
