--- a/ArmaTuFecha/src/main/resources/templates/editar-perfil-musico.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-perfil-musico.html
@@ -126,7 +126,7 @@
 								<label>Otro:&nbsp;</label><input class="form-control" name="link_musica3" type="url" th:value="${link_musica3}"></input><br></br>	
 								
 								<div class="text-center">
-									<input class="btn btn-outline-light btn-lg" type="submit" value="Crear"></input>	
+									<input class="btn btn-outline-light btn-lg" type="submit" value="Guardar cambios"></input>	
 								</div>
 							</form>			
 						</div>
