--- a/ArmaTuFecha/src/main/resources/templates/listado-locales.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-locales.html
@@ -44,10 +44,10 @@
 		</div>
 	</nav>
 
-	<header class="bg-primary text-white" id="color1">
+	<header class="bg-primary text-white bootstrap-override-header2" id="color1">
 		      <div class="container text-center">    
 		        <div class="row">
-		        	<div class="col-12" >
+		        	<div class="col" >
 		        		<h1>Revisa los perfiles y encontrá el mejor lugar<br>para hacer tu fecha</h1>
 		        	</div>
 		        </div>	
@@ -60,33 +60,54 @@
     <section id="about" class="bootstrap-override-section2">
     <div class="container">
 			<div class="row">
-				<div class="col-12" id="bootstrap-override-col3">
-					<h5>O probá nuestras opciones de búsqueda...</h5>
-					<br>
-					<form class="form-group" action="/locales/busqueda/procesar">
-						<div class="col">
-							<input name="busquedaNombre" type="text" class="form-control"
-								placeholder="Buscá un lugar por su nombre..."></input><br>
-						</div>
-						<div class="col">
-							<input name="busquedaProvincia" type="text" class="form-control"
-								placeholder="Buscá por provincia..."></input><br>
-						</div>
-
-						
-							<div class="col text-center">
-								<input class="btn btn-outline-dark btn-lg" type="submit"
-									value="Buscar"></input>
+				<div class="col text-center" id="bootstrap-override-col3">
+					<h5>Buscar por..</h5><br>
+						<div class="row">	
+							<div class="col-md-4">
+								<form class="form-group" action="/locales/busqueda-nombre/procesar">
+									<div class="col text-center">
+										<input name="busquedaNombre" type="text" class="form-control"
+											placeholder="Buscá un lugar por su nombre..."></input><br>	
+									</div>
+									<div class="col text-center">
+										<input class="btn btn-outline-dark" type="submit"
+												value="Buscar"></input>
+									</div>					
+								</form>	
 							</div>
-						
-					</form>
+							<div class="col-md-4">
+								<form class="form-group" action="/locales/busqueda-provincia/procesar">	
+									<div class="col text-center">
+										<input name="busquedaProvincia" type="text" class="form-control"
+											placeholder="Buscá por provincia..."></input><br>
+									</div>
+									<div class="col text-center">
+										<input class="btn btn-outline-dark" type="submit"
+													value="Buscar"></input>
+									</div>
+								</form>	
+							</div>
+							<div class="col-md-4">
+								<form class="form-group" action="/locales/busqueda-localidad/procesar">	
+									<div class="col text-center">
+										<input name="busquedaLocalidad" type="text" class="form-control"
+											placeholder="Buscá por localidad..."></input><br>
+									</div>
+									<div class="col text-center">
+											<input class="btn btn-outline-dark" type="submit"
+												value="Buscar"></input>
+									</div>
+								</form>
+							</div>	
+						</div>
+							
 				</div>
 			</div>
 			<!-- Page Heading -->
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item" th:each="perfilLocal:${listadoLocales}">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" src="http://placehold.it/700x400" alt=""></a>
+            <a th:href="'/vista-perfil-local/' + ${perfilLocal.id_usuario}"><img class="card-img-top" th:src="${perfilLocal.foto1}" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a th:href="'/vista-perfil-local/' + ${perfilLocal.id_usuario}" th:text="${perfilLocal.nombre}">Project One</a>
