--- a/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-nombre.html
+++ b/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-nombre.html
@@ -72,7 +72,7 @@
                     <label th:text="${perfilMusico.provincia} + ', '"></label>&nbsp;<label th:text="${perfilMusico.localidad}"></label><br>
 					<label>Teléfono:&nbsp; </label><label th:text="${perfilMusico.telefono}">Teléfono</label><br>
 					<label>Mail:&nbsp; </label><label th:text="${perfilMusico.mail_contacto}">Mail</label><br>
-					<a th:href="${perfilMusico.red_social1}">Facebook</a><br></br>
+					<a th:href="${perfilMusico.red_social1}" th:if="${perfilMusico.red_social1 != null && perfilMusico.red_social1 != ''}" th:text="${perfilMusico.red_social1}">Facebook</a><br><br>
               </p>
             </div>
           </div>
