--- a/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
+++ b/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
@@ -10,17 +10,18 @@
 	    <title>Arma Tu Fecha</title>
 	
 	    <!-- Bootstrap core CSS -->
-	    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet"></link>
+	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"></link>
+	
 	
 	    <!-- Custom styles for this template -->
-	    <link href="css/scrolling-nav.css" rel="stylesheet"></link>
+	    <link href="/css/scrolling-nav.css" rel="stylesheet"></link>
 	    <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 	  </head>
 
 		  <body id="page-top">
 		
 		    <!-- Navigation -->
-		    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav">
+		    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav" layout:fragment="navbar_principal">
 		      <div class="container">
 		        <a class="navbar-brand js-scroll-trigger" href="#page-top">Arma Tu Fecha</a>
 		        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -45,6 +46,7 @@
 		        	<div class="col-12">
 		        		<h2 th:text="${cuenta_eliminada}"></h2>
 		        		<h1>Bienvenid@ a Arma Tu Fecha<br>¿Qué estas buscando?</h1>
+		        		<h5 th:text="${mensaje_logout}"></h5>
 		        	</div>
 		        </div>
 		        <div class="row">
@@ -58,7 +60,7 @@
 		 	  </div>     
 		    </header>
 		
-		    <section id="about">
+		    <section id="about" layout:fragment="about">
 		      <div class="container">
 		        <div class="row">
 		          <div class="col-lg-8 mx-auto">
@@ -82,21 +84,24 @@
 		    <!-- Footer -->
 		    <footer class="py-5 bg-dark">
 		      <div class="container">
-		        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2017</p>
+		        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
 		      </div>
 		      <!-- /.container -->
 		    </footer>
 		
 		    <!-- Bootstrap core JavaScript -->
-		    <script src="vendor/jquery/jquery.min.js"></script>
-		    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+			<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
 		
 		    <!-- Plugin JavaScript -->
-		    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+		    <script src="/vendor/jquery-easing/jquery.easing.min.js"></script>
 		
 		    <!-- Custom JavaScript for this theme -->
-		    <script src="js/scrolling-nav.js"></script>
+		    <script src="/js/scrolling-nav.js"></script>
 		
 		  </body>
+		  
+		  
 
 </html>
