--- a/ArmaTuFecha/src/main/resources/templates/perfil-local-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-local-logueado.html
@@ -35,7 +35,7 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						th:href="'/home/local/' + ${nombre}">Home</a></li>
+						href="/">Home</a></li>
 					<li class="nav-item">
 		              <a class="nav-link js-scroll-trigger" th:href="'/locales/' + ${nombre}">Mi Perfil</a>
 		             </li> 	
@@ -65,13 +65,13 @@
             </ol>
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
-                <img class="d-block img-fluid" th:src="${foto1}" alt="First slide">
+                <img class="d-block img-fluid" th:src="${foto1}"  th:if="${foto1}" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block img-fluid" th:src="${foto2}" alt="Second slide">
+                <img class="d-block img-fluid" th:src="${foto2}" th:if="${foto2}" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block img-fluid" th:src="${foto3}" alt="Third slide">
+                <img class="d-block img-fluid" th:src="${foto3}" th:if="${foto3}" alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -109,9 +109,9 @@
 			<div class="row">	
 				<div class="col">
 					<h3 class="my-3">Redes sociales</h3>
-					<a th:href="${red_social1}" th:if="${red_social1}">Facebook</a><br><br>
-					<a th:href="${red_social2}" th:if="${red_social2}">Instagram</a><br><br>
-				    <a th:href="${red_social3}" th:if="${red_social3}">Otro</a><br><br>
+					<a th:href="${red_social1}" th:if="${red_social1 != null && red_social1 != ''}" th:text="${red_social1}">Facebook</a><br><br>
+					<a th:href="${red_social2}" th:if="${red_social2 != null && red_social2 != ''}" th:text="${red_social2}">Instagram</a><br><br>
+				    <a th:href="${red_social3}" th:if="${red_social3 != null && red_social3 != ''}" th:text="${red_social3}">Otro</a><br><br>
 				    <a th:href="'/locales/mi-perfil/editar/' + ${id_usuario}" >Editar datos del perfil</a><br>
 				</div>
 			</div>
