--- a/ArmaTuFecha/src/main/resources/templates/perfil-musico-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-musico-logueado.html
@@ -35,7 +35,7 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						th:href="'/home/musico/' + ${nombre}">Home</a></li>
+						href="/">Home</a></li>
 					<li class="nav-item">
 		              <a class="nav-link js-scroll-trigger" th:href="'/musicos/' + ${nombre}">Mi Perfil</a>
 		             </li> 	
@@ -109,12 +109,12 @@
 			<div class="row">	
 				<div class="col">
 					<h3 class="my-3">Redes sociales</h3>
-					<a th:href="${red_social1}" th:if="${red_social1}">Facebook</a><br>
-					<a th:href="${red_social2}" th:if="${red_social2}">Instagram</a><br>
-				    <a th:href="${red_social3}" th:if="${red_social3}">Otro</a><br><br>
-				    <a th:href="${link_musica1}" th:if="${link_musica1}">YouTube</a><br>
-					<a th:href="${link_musica2}" th:if="${link_musica2}">Bandcamp</a><br>
-					<a th:href="${link_musica3}" th:if="${link_musica3}">Otro</a><br><br>
+					<a th:href="${red_social1}" th:if="${red_social1 != null && red_social1 != ''}" th:text="${red_social1}">Facebook</a><br><br>
+					<a th:href="${red_social2}" th:if="${red_social2 != null && red_social2 != ''}" th:text="${red_social2}">Instagram</a><br><br>
+				    <a th:href="${red_social3}" th:if="${red_social3 != null && red_social3 != ''}" th:text="${red_social3}">Otro</a><br><br>
+				     <a th:href="${link_musica1}" th:if="${link_musica1 != null && link_musica1 != ''}" th:text="${link_musica1}">YouTube</a><br><br>
+					<a th:href="${link_musica2}" th:if="${link_musica2 != null && link_musica2 != ''}" th:text="${link_musica1}">Bandcamp</a><br><br>
+					<a th:href="${link_musica3}" th:if="${link_musica3 != null && link_musica3 != ''}" th:text="${link_musica1}">Otro</a><br><br>
 				    <a th:href="'/musicos/mi-perfil/editar/' + ${id_usuario}" >Editar datos del perfil</a><br>
 				</div>
 			</div>
