arregladas rutas para usuario logueado template para eliminar perfil rutas para editar perfil, editar usuario y eliminar cuenta funcionando pagina principal para usuario logueado

--- a/ArmaTuFecha/src/main/resources/templates/editar-perfil-musico.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-perfil-musico.html
@@ -126,7 +126,8 @@
 								<label>Otro:&nbsp;</label><input class="form-control" name="link_musica3" type="url" th:value="${link_musica3}"></input><br></br>	
 								
 								<div class="text-center">
-									<input class="btn btn-outline-light btn-lg" type="submit" value="Guardar cambios"></input>	
+									<input class="btn btn-outline-light btn-lg" type="submit" value="Guardar cambios"></input><br><br>
+								<a class="btn btn-outline-light btn" href="./">Volver</a>	
 								</div>
 							</form>			
 						</div>
