--- a/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-provincia.html
+++ b/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-provincia.html
@@ -93,7 +93,7 @@
       <div class="row">
         <div class="col-lg-4 col-sm-6 portfolio-item" th:each="perfilMusico:${listadoMusicos}">
           <div class="card h-100">
-            <a href="#"><img class="card-img-top" th:src="${perfilMusico.foto1}" alt=""></a>
+            <a th:href="'/vista-perfil-musico/' + ${perfilMusico.id_usuario}"><img class="card-img-top" th:src="${perfilMusico.foto1}" alt=""></a>
             <div class="card-body">
               <h4 class="card-title">
                 <a th:href="'/vista-perfil-musico/' + ${perfilMusico.id_usuario}" th:text="${perfilMusico.nombre}">Project One</a>
