--- a/ArmaTuFecha/src/main/resources/static/css/estilos.css
+++ b/ArmaTuFecha/src/main/resources/static/css/estilos.css
@@ -46,6 +46,12 @@
 	padding-bottom: 100px;
 }
 
+.bootstrap-override-header3 {
+	height: 600px;
+	padding-top: 200px;
+
+}
+
 
 .bootstrap-override-section {
 	padding-top: 100px !important;
