--- a/ArmaTuFecha/src/main/resources/templates/editar-perfil-local.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-perfil-local.html
@@ -126,7 +126,8 @@
 								<label>Otro:&nbsp;</label><input class="form-control" name="red_social3" type="url" th:value="${red_social3}"></input><br></br>						
 								
 								<div class="text-center">
-									<input class="btn btn-outline-light btn-lg" type="submit" value="Guardar cambios"></input>	
+									<input class="btn btn-outline-light btn-lg" type="submit" value="Guardar cambios"></input><br><br>
+								<a class="btn btn-outline-light btn" href="./">Volver</a>	
 								</div>
 							</form>			
 						</div>
