--- a/ArmaTuFecha/src/main/resources/templates/navbar-dark-local-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/navbar-dark-local-logueado.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="es" layout:decorate="listado-locales">
+<html lang="es" layout:decorate="listado-locales listado-musicos">
 
 		<head>
 	    	<meta charset="utf-8"></meta>
 	  	</head> 
 
-		  <body id="page-top">
+		 
 		
 		    <!-- Navigation -->
 		    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top" id="mainNav" layout:fragment="navbar-dark-local">
@@ -20,7 +20,7 @@
 		              <a class="nav-link js-scroll-trigger" href="/">Home</a>
 		            </li>
 		            <li class="nav-item">
-		              <a class="nav-link js-scroll-trigger" th:href="'/locales/' + ${nombre}">Mi Perfil</a>
+		              <a class="nav-link js-scroll-trigger" th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil'">Mi Perfil</a>
 		             </li> 
 		            <li class="nav-item">
 		              <a class="nav-link js-scroll-trigger" href="/logout">Log out</a>
