--- a/ArmaTuFecha/src/main/resources/templates/perfil-local-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-local-logueado.html
@@ -14,7 +14,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/css/portfolio-item.css" rel="stylesheet"></link>
-    <link href="css/scrolling-nav.css" rel="stylesheet"></link>
+    <link href="/css/scrolling-nav.css" rel="stylesheet"></link>
     <link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
 
   </head>
@@ -35,9 +35,9 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item"><a class="nav-link js-scroll-trigger"
-						href="/">Home</a></li>
+					th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/home'">Home</a></li>
 					<li class="nav-item">
-		              <a class="nav-link js-scroll-trigger" th:href="'/locales/' + ${nombre}">Mi Perfil</a>
+		              <a class="nav-link js-scroll-trigger" th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil'">Mi Perfil</a>
 		             </li> 	
 		            <li class="nav-item">
 		              <a class="nav-link js-scroll-trigger" href="/logout">Log out</a>
@@ -65,13 +65,13 @@
             </ol>
             <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
-                <img class="d-block img-fluid" th:src="${foto1}"  th:if="${foto1}" alt="First slide">
+                <img class="d-block img-fluid" th:src="${foto1}"   alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block img-fluid" th:src="${foto2}" th:if="${foto2}" alt="Second slide">
+                <img class="d-block img-fluid" th:src="${foto2}"  alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block img-fluid" th:src="${foto3}" th:if="${foto3}" alt="Third slide">
+                <img class="d-block img-fluid" th:src="${foto3}"  alt="Third slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -112,7 +112,7 @@
 					<a th:href="${red_social1}" th:if="${red_social1 != null && red_social1 != ''}" th:text="${red_social1}">Facebook</a><br><br>
 					<a th:href="${red_social2}" th:if="${red_social2 != null && red_social2 != ''}" th:text="${red_social2}">Instagram</a><br><br>
 				    <a th:href="${red_social3}" th:if="${red_social3 != null && red_social3 != ''}" th:text="${red_social3}">Otro</a><br><br>
-				    <a th:href="'/locales/mi-perfil/editar/' + ${id_usuario}" >Editar datos del perfil</a><br>
+				    <a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar'">Editar datos del perfil</a><br>
 				</div>
 			</div>
 			<div class="row">			
@@ -120,9 +120,9 @@
 					<h3 class="my-3">Datos de la cuenta</h3>
 				  	<label>Mail:&nbsp;</label><label th:text="${mail}"></label><br>
 				  	<label>Contraseña:&nbsp;</label><label th:text="${contrasenia}"></label><br>
-				  	<a th:href= "'/editar-datos-usuario/' + ${id_usuario}">Editar datos de usuario</a><br></br>
+				  	<a th:href= "'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar-datos-usuario'">Editar datos de usuario</a><br></br>
 					
-					<a th:href="'/locales/eliminar-cuenta/' + ${id_usuario}">Eliminar cuenta y perfil.</a><br><br>	
+					<a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/eliminar-cuenta'">Eliminar cuenta y perfil.</a><br><br>	
 				</div> 
 			</div>		     	
       	</div>
